-navigation system update

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
 			textWrap="true"></Label>
 		<Label [row]="gridElementsRows[1]" text="Powered by:" class="h3 text-center"></Label>
 		<Image [row]="gridElementsRows[2]" src="~/assets/pokeapi_logo.png" loadMode="async" stretch="aspectFit"></Image>
-		<Button [row]="gridElementsRows[3]" class="btn btn-primary btn-lg" [nsRouterLink]="['/', 'app', 'today']" clearHistory="true"
-			text="Go to Home!"></Button>
+		<Button [row]="gridElementsRows[3]" class="btn btn-primary btn-lg" [nsRouterLink]="['/app/random']"
+			clearHistory="true" text="Go to Home!"></Button>
 	</GridLayout>
 </Container>
